[gd_scene load_steps=6 format=3 uid="uid://c1h7n1ulym7gx"]

[ext_resource type="Script" path="res://components/componentScripts/baseButton.gd" id="1_bpd4v"]
[ext_resource type="Texture2D" uid="uid://bjs4qq7qryla1" path="res://images/misc/visible-eye.png" id="2_u4am0"]
[ext_resource type="Texture2D" uid="uid://drspla6j1eyc" path="res://images/misc/hidden-eye.png" id="3_1tx2t"]
[ext_resource type="Texture2D" uid="uid://dds7ytl2mxmur" path="res://images/misc/visible-eye-hover.png" id="4_44lgb"]
[ext_resource type="Texture2D" uid="uid://cr1x6hrxr6o54" path="res://images/misc/exclamation_notifier.png" id="6_l35k2"]

[node name="ActionButton" type="Control"]
custom_minimum_size = Vector2(132, 84)
layout_mode = 3
anchors_preset = 0
offset_right = 132.0
offset_bottom = 84.0
theme_type_variation = &"ActionButton"
script = ExtResource("1_bpd4v")

[node name="Action" type="Button" parent="."]
custom_minimum_size = Vector2(132, 84)
layout_mode = 0
offset_right = 80.0
offset_bottom = 50.0
theme_type_variation = &"ActionButton"

[node name="ActionName" type="Label" parent="Action"]
layout_mode = 0
offset_right = 132.0
offset_bottom = 24.0
text = "<Name>"
horizontal_alignment = 1

[node name="ActionImage" type="TextureRect" parent="Action"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 35.0
offset_top = 20.0
offset_right = 95.0
offset_bottom = 80.0
expand_mode = 1

[node name="ActionBonus" type="TextureRect" parent="Action"]
modulate = Color(0, 0, 0, 1)
custom_minimum_size = Vector2(26, 26)
layout_mode = 0
offset_left = 100.0
offset_top = 53.0
offset_right = 126.0
offset_bottom = 79.0
expand_mode = 1

[node name="Eye" type="TextureButton" parent="Action"]
visible = false
layout_mode = 0
offset_left = 106.0
offset_top = 19.0
offset_right = 132.0
offset_bottom = 33.0
toggle_mode = true
texture_normal = ExtResource("2_u4am0")
texture_pressed = ExtResource("3_1tx2t")
texture_hover = ExtResource("4_44lgb")
ignore_texture_size = true
stretch_mode = 0

[node name="Exclamation" type="TextureRect" parent="Action"]
modulate = Color(0.486275, 0.686275, 0.454902, 1)
layout_mode = 0
offset_left = 3.0
offset_top = 18.0
offset_right = 33.0
offset_bottom = 48.0
texture = ExtResource("6_l35k2")
expand_mode = 1

[node name="Story" type="Button" parent="."]
visible = false
custom_minimum_size = Vector2(132, 84)
layout_mode = 0
offset_right = 80.0
offset_bottom = 50.0
theme_type_variation = &"StoryPanel"

[node name="StoryImage" type="TextureRect" parent="Story"]
modulate = Color(0.63692, 0.574193, 0.448455, 1)
layout_mode = 0
offset_left = 35.0
offset_top = 20.0
offset_right = 95.0
offset_bottom = 80.0
expand_mode = 1

[node name="ActionName" type="Label" parent="Story"]
layout_mode = 0
offset_right = 132.0
offset_bottom = 24.0
text = "<Name>"
horizontal_alignment = 1

[node name="Exclamation" type="TextureRect" parent="Story"]
visible = false
modulate = Color(0.721426, 0.4704, 0.289726, 1)
layout_mode = 0
offset_left = 96.0
offset_top = 48.0
offset_right = 126.0
offset_bottom = 78.0
texture = ExtResource("6_l35k2")
expand_mode = 1

[connection signal="focus_entered" from="Action" to="." method="_on_action_focus_entered"]
[connection signal="focus_exited" from="Action" to="." method="_on_action_focus_exited"]
[connection signal="mouse_entered" from="Action" to="." method="_on_action_mouse_entered"]
[connection signal="mouse_exited" from="Action" to="." method="_on_action_mouse_exited"]
[connection signal="toggled" from="Action/Eye" to="." method="_on_eye_toggled"]
[connection signal="focus_entered" from="Story" to="." method="_on_story_focus_entered"]
[connection signal="focus_exited" from="Story" to="." method="_on_story_focus_exited"]
[connection signal="mouse_entered" from="Story" to="." method="_on_story_mouse_entered"]
[connection signal="mouse_exited" from="Story" to="." method="_on_story_mouse_exited"]
